Fix: overflow of body

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--darkblue);
   color: var(--white);
+  overflow-x: hidden;
 }
 
 nav {
@@ -109,6 +110,13 @@ nav {
 
 .btnContainer {
   margin-top: 2em;
+}
+
+.btn1:hover {
+  background-color: white;
+  color: #0d102c;
+  transform: scale(1.1);
+  transition: 0.6s;
 }
 
 .fa-play {
